tests/baselines/reference/noImplicitAnySpreads1.errors.txt
noImplicitAnySpreads1.ts(13,3): error TS7018: Object literal's property 'other' implicitly has an 'any' type.


==== noImplicitAnySpreads1.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/58150#issuecomment-2052517378
    
    function getMore() {
      return {
        c: "foo",
        p: "bar",
        s: "baz",
      };
    }
    
    const bar = {
      p: null, // no error, this gets overriden
      other: null, // error, this does not get overriden
      ~~~~~~~~~~~
!!! error TS7018: Object literal's property 'other' implicitly has an 'any' type.
      ...getMore(),
    };
    